--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -21,8 +21,8 @@
   </div>
   <div class="field">
     <%= f.label :image %><br>
-    <%= f.file_field :file %>
-    <%= f.hidden_field :file_cache %>
+    <%= f.file_field :image %>
+    <%= f.hidden_field :image_cache %>
   </div>
   <div class="actions">
     <%= f.submit %>
