--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,6 +3,6 @@
       <%= f.label :body, "New comment" %><br/>
       <%= f.text_area :body %>
     </p>
-    <%= hidden_field :article_id, :value =>@article.id %>
+    <%= hidden_field :article_id, :value => @post.id %>
     <p><%= f.submit "Add comment" %></p>
 <% end %>
