--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,13 +3,16 @@
 <%= @article.body%>
 <hr>
 </p>
-<div id="comments">
-  <%= render :partial => @article.comments %>
-</div>
-<%= form_for [@post, Comment.new] do |f| %>
-    <p>
-      <%= f.label :body, "New comment" %><br/>
-      <%= f.text_area :body %>
-    </p>
-    <p><%= f.submit "Add comment" %></p>
+<h2>Comments</h2>
+<% for comment in @article.comments %>
+    <%= comment.body %>
+    <hr />
+<% end %>
+<%= form_for [@article, Comment.new], :action =>"create" do |f| %>
+<p>
+  <%= f.label :body, "New comment" %><br/>
+  <%= f.text_area :body %>
+  <%= f.hidden_field :post_id, :value => @article.id %>
+</p>
+<p><%= f.submit "Add comment" %></p>
 <% end %>
