--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,7 @@
               <li><%= link_to "Write an Article", articles_path%></li>
               <li><%= link_to "Upload Video",videos_path %></li>
               <li><%= link_to "Upload a Photo", photos_path%></li>
+              <li><%= link_to "Update Users", managements_path%></li>
             </ul>
           </li>
         </ul>
