--- a/app/views/public_p/index.html.erb
+++ b/app/views/public_p/index.html.erb
@@ -1,6 +1,6 @@
 <% for photo in @photos%>
     <ul class="clearing-thumbs" data-clearing>
-      <li><a href="<%= photo.image%>"><img data-caption="<%= photo.title%>" src="<%= photo.image%>"></a></li>
+      <li><a href="<%= photo.image%>"><img  width="320" height="240" data-caption="<%= photo.title%>" src="<%= photo.image%>"></a></li>
     </ul>
     <br>
     <hr>
